tests/macro-tests/cases/widget_new/incorrect_when_expr_type1.stderr
error[E0308]: mismatched types
  --> cases/widget_new/incorrect_when_expr_type1.rs:10:13
   |
10 |       let _ = Wgt! {
   |  _____________^
11 | |         margin = 0;
12 | |         background_color = colors::BLACK;
...  |
17 | |     };
   | |     ^
   | |     |
   | |_____expected `Var<bool>`, found `Var<SideOffsets>`
   |       arguments to this method are incorrect
   |
   = note: expected struct `zng::var::Var<bool>`
              found struct `zng::var::Var<SideOffsets>`
note: method defined here
  --> $WORKSPACE/crates/zng-app/src/widget/base.rs
   |
   |     pub fn start_when_block(&mut self, inputs: Box<[WhenInput]>, state: Var<bool>, expr: &'static str, location: SourceLocation) {
   |            ^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `zng::__proc_macro_util::var::expr_var` which comes from the expansion of the macro `Wgt` (in Nightly builds, run with -Z macro-backtrace for more info)
